# taticoma

./: README.md
dynamixel-test-1/devel/: .catkin  .rosinstall  setup.sh
dynamixel-test-1/devel/lib/pkgconfig/: my_dynamixel_tutorial.pc
dynamixel-test-1/src/my_dynamixel_tutorial/launch/: start_meta_controller.launch
dynamixel-test-1/src/my_dynamixel_tutorial/settings/: settings.yaml
dynamixel_setup/launch/: controller_spawner.launch
dynamixel_workbench_controllers/config/: taticoma.yaml
dynamixel_workbench_controllers/launch/: dynamixel_controllers.launch
robot-description-test-1/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
robot-description-test-1/devel/include/taticoma_msgs/: LegJointsState.h  LegsJointsState.h
robot-description-test-1/devel/lib/pkgconfig/: taticoma_joint_publisher.pc  taticoma_msgs.pc
robot-description-test-1/install/: .rosinstall
robot-description-test-1/src/taticoma_description/: manifest.xml
src/my_hector_mapping/: CMakeLists.txt  package.xml
taticoma/devel/: .catkin  .rosinstall  setup.sh
taticoma/src/taticoma_description/: manifest.xml
taticoma/src/taticoma_dynamixel/: CMakeLists.txt
taticoma/src/taticoma_msgs/: CMakeLists.txt
taticoma_body_kinematics/src/: body_kinematics.cpp
taticoma_description/launch/: bring_up_pi.launch  bring_up_rviz.launch  isolated.launch
taticoma_description/models/: taticoma_gen_2.xacro
taticoma_description/rviz_settings/: display_model.rviz
taticoma_dynamixel/: CMakeLists.txt  package.xml
taticoma_dynamixel/src/: dynamixel_controller_sub.cpp  dynamixel_controller_sub.hpp
taticoma_feedback_joy/: CMakeLists.txt  package.xml
taticoma_feedback_joy/src/: feedback_joy.cpp  feedback_joy.hpp
taticoma_gait/: CMakeLists.txt
taticoma_gait/src/: gait_kinematics.cpp  gait_kinematics.hpp
taticoma_joint_publisher/: CMakeLists.txt  package.xml
taticoma_joint_publisher/src/: joint_publisher.cpp  tat_joint_publisher.h
taticoma_leg_kinematics/src/: chainiksolvervel_pinv.cpp  chainiksolvervel_pinv.hpp  hp_chainiksolverpos_nr_jl.cpp  hp_chainiksolverpos_nr_jl.hpp  leg_ik_service.cpp  leg_ik_service.hpp  leg_kinematics.cpp  leg_kinematics_pub.cpp  svd_HH.cpp  svd_HH.hpp
taticoma_msgs/: CMakeLists.txt  package.xml
taticoma_msgs/msg/: ControlCommand.msg  FeedbackJoyCmd.msg
taticoma_teleop_joy/: CMakeLists.txt
taticoma_teleop_joy/launch/: joy.launch
taticoma_teleop_joy/src/: teleop_joy.cpp  teleop_joy.hpp
(+82 files in other folders)
